added routes, dashboard, and changed bacground images

--- a/src/app/layout/common/shortcuts/shortcuts.component.html
+++ b/src/app/layout/common/shortcuts/shortcuts.component.html
@@ -126,6 +126,13 @@
                                 [routerLink]="shortcut.link">
                                 <ng-container *ngTemplateOutlet="linkContent"></ng-container>
                             </a>
+                            <a
+                                class="flex flex-col items-center justify-center w-full h-full py-6 no-underline"
+                                *ngIf="shortcut.useRouter"
+                                [ngClass]="{'pointer-events-none': mode === 'modify'}"
+                                [routerLink]="shortcut.link">
+                                <ng-container *ngTemplateOutlet="linkContent"></ng-container>
+                            </a>
                             <!-- Link content template -->
                             <ng-template #linkContent>
                                 <div class="relative flex flex-shrink-0 items-center justify-center w-12 h-12 mb-3 rounded-full bg-gray-100 dark:bg-gray-700">
