--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -71,9 +71,9 @@
                     <button class="flex-auto" type="button" mat-stroked-button>
                         <mat-icon class="icon-size-5" [svgIcon]="'feather:facebook'"></mat-icon>
                     </button>
-                    <button class="flex-auto" type="button" mat-stroked-button>
+                    <!-- <button class="flex-auto" type="button" mat-stroked-button>
                         <mat-icon class="icon-size-5" [svgIcon]="'feather:twitter'"></mat-icon>
-                    </button>
+                    </button> -->
                     <button class="flex-auto" type="button" mat-stroked-button>
                         <mat-icon class="icon-size-5" [svgIcon]="'feather:github'"></mat-icon>
                     </button>
@@ -83,16 +83,15 @@
     </div>
     <div class="relative hidden md:flex flex-auto items-center justify-center w-1/2 h-full p-16 lg:px-28 overflow-hidden bg-gray-800 dark:border-l">
         <!-- Background Image -->
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTS0Qpz3bChXFipEEbid1sDp1hjIn4dsFaRng&s" alt="Background Image" class="absolute inset-0 object-cover w-full h-full opacity-50">
+        <img src="https://images3.alphacoders.com/592/thumb-1920-592651.jpg" alt="Background Image" class="absolute inset-0 object-cover w-full h-full opacity-50">
         <!-- Content -->
         <div class="z-10 relative w-full max-w-2xl">
             <div class="text-7xl font-bold leading-none text-gray-100">
                 <div>Welcome to</div>
-                <div>Central IT - Assets Management</div>
+                <div>ITAM</div>
             </div>
             <div class="mt-6 text-lg tracking-tight leading-6 text-gray-100">
-                Fuse helps developers to build organized and well-coded dashboards full of beautiful and rich modules.
-                Join us and start building your application today.
+                Cisdevo IT Assets Management System makes the supervising of assets more easier.
             </div>            
         </div>
     </div>
