--- a/src/app/modules/admin/data/movement/movement-table/movement-table.component.html
+++ b/src/app/modules/admin/data/movement/movement-table/movement-table.component.html
@@ -1,6 +1,8 @@
 <div class="flex flex-col flex-auto min-w-0">
     <!-- Header -->
-    <div class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
+    <div
+        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent"
+    >
         <div class="flex-1 min-w-0">
             <!-- Breadcrumbs -->
             <div>
@@ -9,67 +11,199 @@
                         <a class="whitespace-nowrap text-primary-500">Admin</a>
                     </div>
                     <div class="flex items-center ml-1 whitespace-nowrap">
-                        <mat-icon class="icon-size-5 text-secondary" [svgIcon]="'heroicons_solid:chevron-right'"></mat-icon>
+                        <mat-icon
+                            class="icon-size-5 text-secondary"
+                            [svgIcon]="'heroicons_solid:chevron-right'"
+                        ></mat-icon>
                         <a class="ml-1 text-primary-500">Data</a>
                     </div>
                     <div class="flex items-center ml-1 whitespace-nowrap">
-                        <mat-icon class="icon-size-5 text-secondary" [svgIcon]="'heroicons_solid:chevron-right'"></mat-icon>
+                        <mat-icon
+                            class="icon-size-5 text-secondary"
+                            [svgIcon]="'heroicons_solid:chevron-right'"
+                        ></mat-icon>
                         <span class="ml-1 text-secondary">Movement table</span>
                     </div>
                 </div>
                 <div class="flex sm:hidden">
-                    <a class="inline-flex items-center -ml-1.5 text-secondary font-medium" [routerLink]="'./..'">
-                        <mat-icon class="icon-size-5 text-secondary" [svgIcon]="'heroicons_solid:chevron-left'"></mat-icon>
+                    <a
+                        class="inline-flex items-center -ml-1.5 text-secondary font-medium"
+                        [routerLink]="'/dashboard'"
+                    >
+                        <mat-icon
+                            class="icon-size-5 text-secondary"
+                            [svgIcon]="'heroicons_solid:chevron-left'"
+                        ></mat-icon>
                         <span class="ml-1">Back</span>
                     </a>
                 </div>
             </div>
             <!-- Title -->
             <div class="mt-2">
-                <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">Movement table</h2>
+                <h2
+                    class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate"
+                >
+                    Movement table
+                </h2>
             </div>
         </div>
     </div>
 
     <!-- Main -->
     <div class="pt-0">
-        <div class="mat-elevation-z8 overflow-x-auto ">
-            <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)" class="mat-elevation-z8">
+        <div class="mat-elevation-z8 overflow-x-auto">
+            <table
+                mat-table
+                [dataSource]="dataSource"
+                matSort
+                (matSortChange)="announceSortChange($event)"
+                class="min-w-full bg-white rounded-lg shadow-md"
+            >
                 <!-- Position Column -->
                 <ng-container matColumnDef="position">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-                    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        mat-sort-header
+                        class="px-4 py-2 text-left text-gray-600 font-semibold"
+                    >
+                        No.
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                        class="border-b border-gray-200 px-4 py-2"
+                    >
+                        {{ element.position }}
+                    </td>
                 </ng-container>
 
                 <!-- Name Column -->
                 <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        mat-sort-header
+                        class="px-4 py-2 text-left text-gray-600 font-semibold"
+                    >
+                        Name
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                        class="border-b border-gray-200 px-4 py-2"
+                    >
+                        {{ element.name }}
+                    </td>
                 </ng-container>
 
                 <!-- Weight Column -->
                 <ng-container matColumnDef="weight">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
-                    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        mat-sort-header
+                        class="px-4 py-2 text-left text-gray-600 font-semibold"
+                    >
+                        Weight
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                        class="border-b border-gray-200 px-4 py-2"
+                    >
+                        {{ element.weight }}
+                    </td>
                 </ng-container>
 
                 <!-- Symbol Column -->
                 <ng-container matColumnDef="symbol">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
-                    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        mat-sort-header
+                        class="px-4 py-2 text-left text-gray-600 font-semibold"
+                    >
+                        Symbol
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                        class="border-b border-gray-200 px-4 py-2"
+                    >
+                        {{ element.symbol }}
+                    </td>
+                </ng-container>
+
+                <!-- Action Column -->
+                <ng-container matColumnDef="action">
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        class="px-4 py-2 text-left text-gray-600 font-semibold"
+                    >
+                        Action
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                        class="border-b border-gray-200 px-4 py-2"
+                    >
+                        <div class="flex space-x-2">
+                            <button
+                                mat-icon-button
+                                matRipple
+                                class="hover-effect"
+                                matRippleColor="#e1effd"
+                            >
+                                <mat-icon
+                                    class="z-10"
+                                    svgIcon="feather:eye"
+                                ></mat-icon>
+                            </button>
+
+                            <button
+                                mat-icon-button
+                                matRipple
+                                class="hover-effect"
+                                matRippleColor="#e1effd"
+                            >
+                                <mat-icon
+                                    class="z-10"
+                                    svgIcon="feather:edit"
+                                ></mat-icon>
+                            </button>
+                            <button
+                                mat-icon-button
+                                matRipple
+                                class="hover-effect"
+                                matRippleColor="#e1effd"
+                            >
+                                <mat-icon
+                                    class="z-10"
+                                    svgIcon="feather:alert-circle"                                    
+                                ></mat-icon>
+                            </button>
+                        </div>
+                    </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr
+                    mat-row
+                    *matRowDef="let row; columns: displayedColumns"
+                ></tr>
             </table>
 
             <!-- Paginator -->
-            <mat-paginator
-                [pageSizeOptions]="[5, 10, 15, 20]"
-                [pageSize]="15"
-                showFirstLastButtons
-                aria-label="Select page of periodic elements"
-            ></mat-paginator>
+            <div>
+                <mat-paginator
+                    [pageSizeOptions]="[5, 10, 15, 20]"
+                    [pageSize]="15"
+                    showFirstLastButtons
+                    aria-label="Select page of periodic elements"
+                ></mat-paginator>
+            </div>
         </div>
     </div>
 </div>
