Added new components and added new routes

--- a/src/app/modules/admin/assets/peripherals/peripherals-details/peripherals-details.component.html
+++ b/src/app/modules/admin/assets/peripherals/peripherals-details/peripherals-details.component.html
@@ -15,14 +15,14 @@
                             class="icon-size-5 text-secondary"
                             [svgIcon]="'heroicons_solid:chevron-right'"
                         ></mat-icon>
-                        <a class="ml-1 text-primary-500">Data</a>
+                        <a class="ml-1 text-primary-500">Assets</a>
                     </div>
                     <div class="flex items-center ml-1 whitespace-nowrap">
                         <mat-icon
                             class="icon-size-5 text-secondary"
                             [svgIcon]="'heroicons_solid:chevron-right'"
                         ></mat-icon>
-                        <span class="ml-1 text-secondary">Movement Table</span>
+                        <span class="ml-1 text-secondary">Peripherals Details</span>
                     </div>
                 </div>
                 <div class="flex sm:hidden">
@@ -43,7 +43,7 @@
                 <h2
                     class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate"
                 >
-                    Movement Table
+                    Peripherals Details
                 </h2>
             </div>
         </div>
