--- a/src/app/modules/admin/assets/pc/pc-details/pc-details.component.html
+++ b/src/app/modules/admin/assets/pc/pc-details/pc-details.component.html
@@ -15,14 +15,14 @@
                             class="icon-size-5 text-secondary"
                             [svgIcon]="'heroicons_solid:chevron-right'"
                         ></mat-icon>
-                        <a class="ml-1 text-primary-500">Data</a>
+                        <a class="ml-1 text-primary-500">Assets</a>
                     </div>
                     <div class="flex items-center ml-1 whitespace-nowrap">
                         <mat-icon
                             class="icon-size-5 text-secondary"
                             [svgIcon]="'heroicons_solid:chevron-right'"
                         ></mat-icon>
-                        <span class="ml-1 text-secondary">Movement Table</span>
+                        <span class="ml-1 text-secondary">PC Details</span>
                     </div>
                 </div>
                 <div class="flex sm:hidden">
@@ -43,16 +43,24 @@
                 <h2
                     class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate"
                 >
-                    Movement Table
+                    PC Details
                 </h2>
             </div>
         </div>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <!-- Add product button -->
-            <button class="ml-4" mat-stroked-button>
+            <!-- Import file button -->
+            <!-- Hidden file input -->
+            <input type="file" accept=".csv" #fileInput style="display: none" />
+
+            <!-- Trigger button -->
+            <button class="ml-4" mat-stroked-button (click)="fileInput.click()">
                 <mat-icon [svgIcon]="'feather:download'"></mat-icon>
                 <span class="ml-2 mr-1">Import CSV</span>
             </button>
+            <!-- <button class="ml-4" mat-stroked-button>
+                <mat-icon [svgIcon]="'feather:download'"></mat-icon>
+                <span class="ml-2 mr-1">Import CSV</span>
+            </button> -->
         </div>
     </div>
 
